[package]
name = "diesel_cockroach"
version = "0.1.1"
authors = ["Tom Milligan <code@tommilligan.net>"]
edition = "2018"
description = "Additional Diesel ORM support for CockroachDB syntax."
homepage = "https://github.com/tommilligan/diesel_cockroach"
readme = "README.md"
license = "MIT"

[dependencies]
diesel = { version = "1.4.8", default-features = false, features = ["postgres"] }

[dev-dependencies]
pretty_assertions = "1.2.0"
